// Copyright 2017 Luke Granger-Brown. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "midisrvpb";

import "google/protobuf/empty.proto";

service MIDIService {
	// Plays a stream of events.
	rpc Output (stream MIDIWriteRequest) returns (google.protobuf.Empty);
}

message MIDIWriteRequest {
	oneof data {
		MIDIEvent immediateEvent = 1;
		MIDIEvents events = 2;
		SysExMIDIMessage sysExMessage = 3;
	}
}

message SysExMIDIMessage {
	int64 timestamp = 1;
	bytes data = 2;
}

message MIDIEvents {
	repeated MIDIEvent events = 1;
}

message MIDIEvent {
	int64 timestamp = 1;
	int64 status = 2;
	int64 data1 = 3;
	int64 data2 = 4;
}
